fixed overflow

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -208,6 +208,9 @@ h1, h2, h3 {
 
 }
 
+#monsters {
+    overflow: auto;
+}
 #tjmaxx img{
     width:120px;
     height:100px;
